# graph-transfer-learning

./: .gitignore  .gitmodules  .pyre_configuration  15-100-2-negative-triangles.json  3  Dockerfile  Makefile  README.md  Untitled.ipynb  build.py  config.json  docker-entrypoint.sh  pyproject.toml  requirements.lock.txt  requirements.txt  shell.nix
.Trash-0/files/: 01_EGI_Framework_Original_Code_Overview.md  EGI_Framework_Original_Code_Overview.html
.Trash-0/info/: 01_EGI_Framework_Original_Code_Overview.md.trashinfo  EGI_Framework_Original_Code_Overview.html.trashinfo  Untitled Folder.trashinfo  data.trashinfo
.github/workflows/: main.yml
data/: README.md
docker/: Dockerfile  README.md
docker/EGI/: Dockerfile  README.md
dockerfiles/EGI/: Dockerfile  README.md
dockerfiles/devel/: Dockerfile
dockerfiles/devel2/: Dockerfile  README.md
docs/: conf.py  index.rst
docs/concepts/: Makefile  bibilography.rst  classification.dot  linkpred.dot  unsupervised_learning.rst  unsupervised_learning_1.dot  unsupervised_learning_2.dot
docs/development/: style_guide.rst
docs/howto/: link_prediction.rst
docs/introduction/: installation.rst  project_structure.rst
documents/: 01_EGI_Framework_Original_Code_Overview.html  EGI_Framework_Original_Code_Overview.html
experiments/01_citation_link_prediction_finetuning/: run.py  stopping
experiments/02_forestfire_structural_transfer/: run.py  run.sh  test.py
experiments/02_forestfire_structural_transfer/wandb/: latest-run
experiments/03_airports_direct_transfer/: run.py  stopping
notebooks/: 01_EGI_Framework_Original_Code_Overview.ipynb  02_Edge_Prediction_With_EGI.ipynb  2023-09-19-EGI-Airport-Experiment.ipynb  EGI Framework overview.ipynb  EGI Framework overview.md  EGI_Framework_Original_Code_Overview.ipynb  EGI_Framework_Original_Code_Overview.md  best_classification_2.pkl  new.org  overview_code.py
notebooks/.ipynb_checkpoints/: EGI Framework overview-checkpoint.md
results/: README.md
results/2023-05-30-airport/: report.html  report.qmd
results/20230523-nd-clustering-experiment/: analysis.Rmd  analysis.html  analysispoisson.Rmd  data.csv  datapoisson.csv  poisson.qmd  powerlaw.qmd
results/20230527-clustering/: data.csv  report.html  report.qmd
results/airport-report/: data.csv  report.html
results/archive/airport-report/: data.csv  report.qmd
results/archive/clustering-report/: report.html  report.qmd
results/clustering-report/: data.csv  report.html  report.qmd
results/nd60-2023-08-16-triangle-prediction-results/: .gitignore  data.csv  foo.csv  report.qmd
results/nd60-2023-09-08-link-prediction-results/: data.csv  report.qmd
scripts/: airport_direct_transfer.py  citation_link_prediction_finetuning.py  clustered_experiment.py  core_periphery_experiment.py  generate-clustered-dataset.py  generate-gcmpy-dataset.py  generate_clustered_dataset.py  generate_core_periphery_dataset.py  generate_modular_dataset.py  interactive.ipy  module_detection_experiment.py  sweep_airport.py  sweep_core_periphery.py
scripts/archive/: README.md  citation_link_prediction_finetuning.py  generate_modular_dataset.py  module_detection_experiment.py
scripts/experiments/: airport_debug.py  airport_direct_transfer.py  aug_link_prediction.py  aug_triangle_prediction.py  clustered_experiment.py  coauthor_classification.py  core_periphery_experiment.py  debug_link_prediction.py  phase_change.py  profile_link_prediction.py  profile_triangle_prediction.py  sweep_airport.py  sweep_core_periphery.py  sweep_link_prediction.py  sweep_triangle_detection.py  sweep_triangle_prediction.py  triangle_detection_task.py
scripts/experiments/archive/: airport_direct_transfer.py  core_periphery_experiment.py  sweep_airport.py  sweep_coauthor_classification.py  sweep_core_periphery.py
scripts/experiments/aug_link_prediction_hyperparams/: egi.toml  graphsage-gcn.toml  graphsage-mean.toml  graphsage-pool.toml  graphsage.toml  triangle.toml
scripts/experiments/aug_triangle_detection_hyperparams/: egi.toml  graphsage-gcn.toml  (+3 more)
scripts/generate-data/: generate_2023_08_clustered.py  generate_2023_08_powerlaw.py  generate_clustered_dataset.py  generate_core_periphery_dataset.py
scripts/pre-processing/: negative-triangles.py
scripts/vis/: triangle_sampler.py  visualise_coauthor_feats.py
src/cpp/: gtl.cpp
src/graphtransferlearning/: __init__.py  graph_generators.py  samplers.py  wandb.py
src/gtl/: __init__.py  _generation_script.py  _utils.py  argparse.py  cli.py  clustered.py  coauthor.py  features.py  graph.py  graph_generators.py  interactive.py  samplers.py  splits.py  two_part.py  wandb.py
(+327 files in other folders)
