[project]
name = "graphtransferlearing"
version = "0.0.1"
dependencies = []


[tool.poetry]
name = "graphtransferlearning"
version = "0.0.1"
description = ""
authors = ["Niklas Dewally <niklas@dewally.com>"]
readme = "README.md"
packages = [
    { include = "gtl", from = "src" },
]


[tool.poetry.build]
#https://github.com/python-poetry/poetry/issues/2740#issuecomment-1447617294
#https://github.com/python-poetry/poetry/issues/7470
#https://github.com/python-poetry/poetry-core/pull/318
script="build.py"
generate-setup-file = true 


[tool.poetry.dependencies]
python = "3.11.*"
torch = "^2.0.1"
dgl = [
   {url="https://data.dgl.ai/wheels/cu117/dgl-1.1.0%2Bcu117-cp310-cp310-manylinux1_x86_64.whl",markers="sys_platform =='linux'"},
   {url="https://data.dgl.ai/wheels/dgl-1.1.0-cp310-cp310-macosx_11_0_arm64.whl",markers="sys_platform=='darwin' and platform_machine=='arm64' "},
   {url="https://data.dgl.ai/wheels/dgl-1.1.0-cp310-cp310-macosx_10_10_x86_64.whl",markers="sys_platform=='darwin' and platform_machine=='x86_64' "}
]
gcmpy = {git = "https://github.com/PeterStAndrews/gcmpy"}
scipy = "^1.10.1"
igraph = "^0.10.4"
networkx = "^2.6"
tqdm = "^4.65.0"
torchmetrics = "^0.11.4"
wandb = "^0.15.3"
ipython = "^8.13.2"
scikit-learn = "^1.2.2"
#matplotlib = "~3.1"
pydot = "^1.4.2"
agraph = "^0.0.3"
epydemic = "*"


[tool.poetry.group.dev.dependencies]
matplotlib = "3.5.1"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core","torch"]
build-backend = "poetry.core.masonry.api"
