[project]
name = "graphtransferlearing"
version = "0.0.1"
dependencies = []


[tool.poetry]
name = "graphtransferlearning"
version = "0.0.1"
description = ""
authors = ["Niklas Dewally <niklas@dewally.com>"]
readme = "README.md"
packages = [
    { include = "gtl", from = "src" },
]

[tool.poetry.dependencies]
python = "3.11.*"
torch = "^2.0.1"
dgl = [
   {url="https://data.dgl.ai/wheels/cu117/dgl-1.1.0%2Bcu117-cp311-cp311-manylinux1_x86_64.whl",markers="sys_platform =='linux'"},
   {url="https://data.dgl.ai/wheels/dgl-1.1.0-cp311-cp311-macosx_11_0_arm64.whl",markers="sys_platform=='darwin' and platform_machine=='arm64' "},
   {url="https://data.dgl.ai/wheels/dgl-1.1.0-cp311-cp311-macosx_10_10_x86_64.whl",markers="sys_platform=='darwin' and platform_machine=='x86_64' "}
]
gcmpy = {git = "https://github.com/PeterStAndrews/gcmpy"}
scipy = "^1.10.1"
igraph = "^0.10.4"
networkx = "^2.6"
tqdm = "^4.65.0"
wandb = "^0.15.3"
ipython = "^8.13.2"
scikit-learn = "^1.2.2"
pydot = "^1.4.2"
agraph = "^0.0.3"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "3.5.1"
ipython = "^8.14.0"
black = "*"
pyre-check = "^0.9.18"
ruff = "^0.0.275"
ipdb="*"



[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]

